syntax.output
Terminaux inutilisés dans la grammaire

    tERROR


Grammaire

    0 $accept: Main $end

    1 Main: tMAIN tPO tPF tAO Expr tAF

    2 Expr: Expr tPVIRG Expr
    3     | Expr tPVIRG
    4     | Def
    5     | Aff
    6     | tPRINT tPO tID tPF

    7 Def: tINT Var tEGAL Val
    8    | tINT Var
    9    | tCONST Var tEGAL Val
   10    | tCONST Var

   11 Val: Val tADD Val
   12    | Val tSOU Val
   13    | Val tMUL Val
   14    | Val tDIV Val
   15    | tID
   16    | tNB

   17 Var: tID tVIRG Var
   18    | tID

   19 Aff: Var tEGAL Val
   20    | Var tADD tEGAL Val
   21    | Var tSOU tEGAL Val
   22    | Var tMUL tEGAL Val
   23    | Var tDIV tEGAL Val


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tMAIN (258) 1
    tVIRG (259) 17
    tPVIRG (260) 2 3
    tPRINT (261) 6
    tEGAL (262) 7 9 19 20 21 22 23
    tSOU (263) 12 21
    tADD (264) 11 20
    tMUL (265) 13 22
    tDIV (266) 14 23
    tPO (267) 1 6
    tPF (268) 1 6
    tAO (269) 1
    tAF (270) 1
    tCONST (271) 9 10
    tINT (272) 7 8
    tERROR (273)
    tNB <nb> (274) 16
    tID <var> (275) 6 15 17 18


Non-terminaux, suivis des règles où ils apparaissent

    $accept (21)
        à gauche: 0
    Main <nb> (22)
        à gauche: 1
        à droite: 0
    Expr <nb> (23)
        à gauche: 2 3 4 5 6
        à droite: 1 2 3
    Def <nb> (24)
        à gauche: 7 8 9 10
        à droite: 4
    Val <nb> (25)
        à gauche: 11 12 13 14 15 16
        à droite: 7 9 11 12 13 14 19 20 21 22 23
    Var <nb> (26)
        à gauche: 17 18
        à droite: 7 8 9 10 17 19 20 21 22 23
    Aff (27)
        à gauche: 19 20 21 22 23
        à droite: 5


État 0

    0 $accept: • Main $end

    tMAIN  décalage et aller à l'état 1

    Main  aller à l'état 2


État 1

    1 Main: tMAIN • tPO tPF tAO Expr tAF

    tPO  décalage et aller à l'état 3


État 2

    0 $accept: Main • $end

    $end  décalage et aller à l'état 4


État 3

    1 Main: tMAIN tPO • tPF tAO Expr tAF

    tPF  décalage et aller à l'état 5


État 4

    0 $accept: Main $end •

    $défaut  accepter


État 5

    1 Main: tMAIN tPO tPF • tAO Expr tAF

    tAO  décalage et aller à l'état 6


État 6

    1 Main: tMAIN tPO tPF tAO • Expr tAF

    tPRINT  décalage et aller à l'état 7
    tCONST  décalage et aller à l'état 8
    tINT    décalage et aller à l'état 9
    tID     décalage et aller à l'état 10

    Expr  aller à l'état 11
    Def   aller à l'état 12
    Var   aller à l'état 13
    Aff   aller à l'état 14


État 7

    6 Expr: tPRINT • tPO tID tPF

    tPO  décalage et aller à l'état 15


État 8

    9 Def: tCONST • Var tEGAL Val
   10    | tCONST • Var

    tID  décalage et aller à l'état 10

    Var  aller à l'état 16


État 9

    7 Def: tINT • Var tEGAL Val
    8    | tINT • Var

    tID  décalage et aller à l'état 10

    Var  aller à l'état 17


État 10

   17 Var: tID • tVIRG Var
   18    | tID •

    tVIRG  décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 18 (Var)


État 11

    1 Main: tMAIN tPO tPF tAO Expr • tAF
    2 Expr: Expr • tPVIRG Expr
    3     | Expr • tPVIRG

    tPVIRG  décalage et aller à l'état 19
    tAF     décalage et aller à l'état 20


État 12

    4 Expr: Def •

    $défaut  réduction par utilisation de la règle 4 (Expr)


État 13

   19 Aff: Var • tEGAL Val
   20    | Var • tADD tEGAL Val
   21    | Var • tSOU tEGAL Val
   22    | Var • tMUL tEGAL Val
   23    | Var • tDIV tEGAL Val

    tEGAL  décalage et aller à l'état 21
    tSOU   décalage et aller à l'état 22
    tADD   décalage et aller à l'état 23
    tMUL   décalage et aller à l'état 24
    tDIV   décalage et aller à l'état 25


État 14

    5 Expr: Aff •

    $défaut  réduction par utilisation de la règle 5 (Expr)


État 15

    6 Expr: tPRINT tPO • tID tPF

    tID  décalage et aller à l'état 26


État 16

    9 Def: tCONST Var • tEGAL Val
   10    | tCONST Var •

    tEGAL  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 10 (Def)


État 17

    7 Def: tINT Var • tEGAL Val
    8    | tINT Var •

    tEGAL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 8 (Def)


État 18

   17 Var: tID tVIRG • Var

    tID  décalage et aller à l'état 10

    Var  aller à l'état 29


État 19

    2 Expr: Expr tPVIRG • Expr
    3     | Expr tPVIRG •

    tPRINT  décalage et aller à l'état 7
    tCONST  décalage et aller à l'état 8
    tINT    décalage et aller à l'état 9
    tID     décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 3 (Expr)

    Expr  aller à l'état 30
    Def   aller à l'état 12
    Var   aller à l'état 13
    Aff   aller à l'état 14


État 20

    1 Main: tMAIN tPO tPF tAO Expr tAF •

    $défaut  réduction par utilisation de la règle 1 (Main)


État 21

   19 Aff: Var tEGAL • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 33


État 22

   21 Aff: Var tSOU • tEGAL Val

    tEGAL  décalage et aller à l'état 34


État 23

   20 Aff: Var tADD • tEGAL Val

    tEGAL  décalage et aller à l'état 35


État 24

   22 Aff: Var tMUL • tEGAL Val

    tEGAL  décalage et aller à l'état 36


État 25

   23 Aff: Var tDIV • tEGAL Val

    tEGAL  décalage et aller à l'état 37


État 26

    6 Expr: tPRINT tPO tID • tPF

    tPF  décalage et aller à l'état 38


État 27

    9 Def: tCONST Var tEGAL • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 39


État 28

    7 Def: tINT Var tEGAL • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 40


État 29

   17 Var: tID tVIRG Var •

    $défaut  réduction par utilisation de la règle 17 (Var)


État 30

    2 Expr: Expr • tPVIRG Expr
    2     | Expr tPVIRG Expr •
    3     | Expr • tPVIRG

    tPVIRG  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 2 (Expr)


État 31

   16 Val: tNB •

    $défaut  réduction par utilisation de la règle 16 (Val)


État 32

   15 Val: tID •

    $défaut  réduction par utilisation de la règle 15 (Val)


État 33

   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   14    | Val • tDIV Val
   19 Aff: Var tEGAL Val •

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42
    tMUL  décalage et aller à l'état 43
    tDIV  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 19 (Aff)


État 34

   21 Aff: Var tSOU tEGAL • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 45


État 35

   20 Aff: Var tADD tEGAL • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 46


État 36

   22 Aff: Var tMUL tEGAL • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 47


État 37

   23 Aff: Var tDIV tEGAL • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 48


État 38

    6 Expr: tPRINT tPO tID tPF •

    $défaut  réduction par utilisation de la règle 6 (Expr)


État 39

    9 Def: tCONST Var tEGAL Val •
   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   14    | Val • tDIV Val

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42
    tMUL  décalage et aller à l'état 43
    tDIV  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 9 (Def)


État 40

    7 Def: tINT Var tEGAL Val •
   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   14    | Val • tDIV Val

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42
    tMUL  décalage et aller à l'état 43
    tDIV  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 7 (Def)


État 41

   12 Val: Val tSOU • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 49


État 42

   11 Val: Val tADD • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 50


État 43

   13 Val: Val tMUL • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 51


État 44

   14 Val: Val tDIV • Val

    tNB  décalage et aller à l'état 31
    tID  décalage et aller à l'état 32

    Val  aller à l'état 52


État 45

   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   14    | Val • tDIV Val
   21 Aff: Var tSOU tEGAL Val •

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42
    tMUL  décalage et aller à l'état 43
    tDIV  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 21 (Aff)


État 46

   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   14    | Val • tDIV Val
   20 Aff: Var tADD tEGAL Val •

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42
    tMUL  décalage et aller à l'état 43
    tDIV  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 20 (Aff)


État 47

   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   14    | Val • tDIV Val
   22 Aff: Var tMUL tEGAL Val •

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42
    tMUL  décalage et aller à l'état 43
    tDIV  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 22 (Aff)


État 48

   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   14    | Val • tDIV Val
   23 Aff: Var tDIV tEGAL Val •

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42
    tMUL  décalage et aller à l'état 43
    tDIV  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 23 (Aff)


État 49

   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   12    | Val tSOU Val •
   13    | Val • tMUL Val
   14    | Val • tDIV Val

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 12 (Val)


État 50

   11 Val: Val • tADD Val
   11    | Val tADD Val •
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   14    | Val • tDIV Val

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 11 (Val)


État 51

   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   13    | Val tMUL Val •
   14    | Val • tDIV Val

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42
    tMUL  décalage et aller à l'état 43
    tDIV  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 13 (Val)


État 52

   11 Val: Val • tADD Val
   12    | Val • tSOU Val
   13    | Val • tMUL Val
   14    | Val • tDIV Val
   14    | Val tDIV Val •

    tSOU  décalage et aller à l'état 41
    tADD  décalage et aller à l'état 42
    tMUL  décalage et aller à l'état 43
    tDIV  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 14 (Val)
